added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -194,7 +194,14 @@
     "- Improved Generalization: Appropriate tokenization enhances a model's ability to perform well across different tasks and unseen data by capturing essential language units.\n",
     "\n",
     "## How do you approach sentiment analysis in text data?\n",
-    "#### "
+    "- How do you approach sentiment analysis in text data?\n",
+    "- Feature Extraction: Use techniques like Bag of Words, TF-IDF, or Word Embeddings to transform text into numerical data.\n",
+    "- Model Selection: Choose a model, ranging from simple (like Naive Bayes) to complex (like LSTM or BERT for deep insights).\n",
+    "- Training: Train the model on labeled data to learn to predict sentiment.\n",
+    "- Evaluation: Use metrics like accuracy and F1-score to assess performance.\n",
+    "- Deployment: Implement the model in the target application for real-time analysis.\n",
+    "\n",
+    "##"
    ]
   },
   {
