added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -201,7 +201,16 @@
     "- Evaluation: Use metrics like accuracy and F1-score to assess performance.\n",
     "- Deployment: Implement the model in the target application for real-time analysis.\n",
     "\n",
-    "##"
+    "## Describe a project where you implemented named entity recognition (NER).\n",
+    "\n",
+    "#### NER: Focuses on identifying and classifying key elements from the text into predefined categories such as person names, organizations, locations, etc. It's primarily used for extracting structured information from unstructured text.\n",
+    "- Training: Although spaCy provides pre-trained models, I fine-tuned the model on a labeled subset of my dataset to improve its accuracy specifically for the types of articles I was analyzing.\n",
+    "- Entity Extraction: I ran the trained NER model across the dataset, extracting entities and classifying them into predefined categories.\n",
+    "- Post-processing: The extracted entities were used to tag the articles, and this metadata was then used to enhance search functionality within a content management system.\n",
+    "- Evaluation: I evaluated the model’s performance using precision, recall, and F1-score, and made adjustments to the training data and model parameters based on the results.\n",
+    "\n",
+    "## How would you evaluate the performance of an NLP model?\n",
+    "- ROGUE, Perplexity, BLEU"
    ]
   },
   {
