added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -210,7 +210,8 @@
     "- Evaluation: I evaluated the model’s performance using precision, recall, and F1-score, and made adjustments to the training data and model parameters based on the results.\n",
     "\n",
     "## How would you evaluate the performance of an NLP model?\n",
-    "- ROGUE, Perplexity, BLEU"
+    "- BLEU (Bilingual Evaluation Understudy) score: Measures the quality of machine-generated text against reference translations, commonly used in machine translation.\n",
+    "- ROUGE (Recall-Oriented Understudy for Gisting Evaluation): A set of metrics that evaluate the overlap between generated text and reference text, often used in summarization tasks. They help quantify the model's effectiveness and guide further improvements."
    ]
   },
   {
