added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -218,6 +218,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Chatbot Development\n",
+    "\n",
+    "## What are the key considerations when designing a chatbot for internal use?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##"
    ]
   }
