added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -220,7 +220,18 @@
    "source": [
     "# Chatbot Development\n",
     "\n",
-    "## What are the key considerations when designing a chatbot for internal use?"
+    "## What are the key considerations when designing a chatbot for internal use?\n",
+    "- Centralize Data: Ensure the chatbot has access to centralized data sources like company databases or cloud storage to pull accurate information.\n",
+    "- Structured Access: Structure data access patterns in the chatbot's logic to ensure it retrieves and manipulates data efficiently.\n",
+    "- Document Retrieval: Enable the chatbot to search for and retrieve specific documents based on keywords or queries.\n",
+    "- Keep Temperature 0\n",
+    "\n",
+    "## How do you ensure the chatbot remains up-to-date with internal data changes?\n",
+    "- Scheduled Updates: Set up regular intervals for data synchronization to keep the chatbot's information current.\n",
+    "- Real-Time Data Access: Use APIs or webhooks to integrate real-time data feeds from internal systems into the chatbot.\n",
+    "- Monitoring and Alerts: Implement monitoring tools to detect data changes and alert the system, prompting updates.\n",
+    "\n",
+    "## \n"
    ]
   },
   {
