added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -236,7 +236,8 @@
     "- Select an NLP model that suits your chatbot’s goals, such as language models for understanding context or intent recognition models for determining user needs.\n",
     "- Preprocess and normalize the input data (user queries) for the NLP model, which may include tokenization, removing stop words, and standardizing text.\n",
     "- Embed the NLP model directly into the chatbot’s architecture, or access it via APIs if the model runs on a separate server for scalability and maintenance.\n",
-    "- \n",
+    "\n",
+    "## Describe how you would handle misunderstandings or errors in chatbot responses.\n",
     "\n"
    ]
   },
