--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -238,7 +238,11 @@
     "- Embed the NLP model directly into the chatbot’s architecture, or access it via APIs if the model runs on a separate server for scalability and maintenance.\n",
     "\n",
     "## Describe how you would handle misunderstandings or errors in chatbot responses.\n",
-    "\n"
+    "- Feedback Mechanism: Implement a simple way for users to report misunderstandings or incorrect responses, such as a thumbs up/thumbs down feature, or a \"Report a problem\" option.\n",
+    "- If the chatbot detects uncertainty in its response or receives negative feedback, it should prompt the user for clarification or offer alternatives to refine the query.\n",
+    "- For unresolved queries, have the chatbot escalate the issue to a human agent or provide contact details for further assistance.\n",
+    "-  Collect and analyze data on where and why misunderstandings occur. Use this data to continuously train and refine the chatbot's responses.\n",
+    "-  Design specific responses for when the chatbot fails to understand or when an error occurs, ensuring the user is not left without guidance.\n"
    ]
   },
   {
