added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -241,8 +241,17 @@
     "- Feedback Mechanism: Implement a simple way for users to report misunderstandings or incorrect responses, such as a thumbs up/thumbs down feature, or a \"Report a problem\" option.\n",
     "- If the chatbot detects uncertainty in its response or receives negative feedback, it should prompt the user for clarification or offer alternatives to refine the query.\n",
     "- For unresolved queries, have the chatbot escalate the issue to a human agent or provide contact details for further assistance.\n",
-    "-  Collect and analyze data on where and why misunderstandings occur. Use this data to continuously train and refine the chatbot's responses.\n",
-    "-  Design specific responses for when the chatbot fails to understand or when an error occurs, ensuring the user is not left without guidance.\n"
+    "- Collect and analyze data on where and why misunderstandings occur. Use this data to continuously train and refine the chatbot's responses.\n",
+    "- Design specific responses for when the chatbot fails to understand or when an error occurs, ensuring the user is not left without guidance.\n",
+    "\n",
+    "## How would you build a model to detect overpayments and underpayments in claims data?\n",
+    "- Payment Ratios: Create features like the ratio of paid amount to billed amount (Paid/Billed Ratio), which helps in identifying unusual payments.\n",
+    "- Service-Specific Trends: Develop features that reflect typical payment patterns for specific services or procedures, accounting for regional or provider variations.\n",
+    "- Historical Payment Patterns: Use rolling averages, exponential smoothing, or time series analysis to capture historical payment trends for each claim type.\n",
+    "- Isolation Forest: Detect claims that deviate significantly from the norm as potential overpayments or underpayments.\n",
+    "- Threshold Tuning: Set and adjust thresholds for flagging claims based on business rules and risk tolerance (e.g., only flag claims where Paid/Billed Ratio is outside the 95th percentile).\n",
+    "\n",
+    "## Describe a project where you developed or improved a tool for auditing data."
    ]
   },
   {
