added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -251,7 +251,11 @@
     "- Isolation Forest: Detect claims that deviate significantly from the norm as potential overpayments or underpayments.\n",
     "- Threshold Tuning: Set and adjust thresholds for flagging claims based on business rules and risk tolerance (e.g., only flag claims where Paid/Billed Ratio is outside the 95th percentile).\n",
     "\n",
-    "## Describe a project where you developed or improved a tool for auditing data."
+    "## Describe a project where you developed or improved a tool for auditing data.\n",
+    "- Missing Values: Ensuring critical fields like patient ID, billing codes, and treatment dates were populated.\n",
+    "- Data Type Validation: Ensuring fields had the correct data types (e.g., numeric values for billing amounts, dates in proper format).\n",
+    "- Range Checks: Ensuring numerical fields, like patient age or billing amounts, were within logical and regulatory bounds.\n",
+    "- Duplicate Detection: Identifying duplicate records based on patient ID and other key identifiers.\n"
    ]
   },
   {
