--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -262,6 +262,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Scenario-Based Questions\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##"
    ]
   }
