added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -263,7 +263,12 @@
    "metadata": {},
    "source": [
     "# Scenario-Based Questions\n",
-    "\n"
+    "- User Feedback: Review user feedback or reports that flagged the incorrect advice to understand the context and frequency of the issue.\n",
+    "- Data Freshness: Confirm whether the data being used by the chatbot is outdated. Check the timestamps on data imports or API calls to external data sources.\n",
+    "- Manual Refresh: If the data is outdated, manually trigger a data refresh from the source systems to bring the chatbot's knowledge base up to date.\n",
+    "- Data Pipeline Inspection: Inspect the data pipeline to ensure that data flows from the source to the chatbot without bottlenecks or errors. Look for broken API connections, ETL process failures, or misconfigured data jobs.\n",
+    "- Simulate Scenarios: Test the chatbot by simulating the scenarios where it previously provided incorrect advice. Ensure the updated data is now being used and that the advice is correct.\n",
+    "- Regression Testing: Perform regression testing to confirm that recent data updates have not introduced new issues or degraded the chatbot's overall performance."
    ]
   },
   {
