added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -212,6 +212,7 @@
     "## How would you evaluate the performance of an NLP model?\n",
     "- BLEU (Bilingual Evaluation Understudy) score: Measures the quality of machine-generated text against reference translations, commonly used in machine translation.\n",
     "- ROUGE (Recall-Oriented Understudy for Gisting Evaluation): A set of metrics that evaluate the overlap between generated text and reference text, often used in summarization tasks. They help quantify the model's effectiveness and guide further improvements.\n",
+    "- Perplexity is a metric used to evaluate how well a probabilistic model predicts a sample, such as a sequence of words.\n",
     "#### There are two main evaluation methods: intrinsic and extrinsic. Intrinsic evaluation focuses on the model's internal aspects, like accuracy and precision, while extrinsic evaluation focuses on external aspects, like user satisfaction. Intrinsic evaluation is useful for debugging and improving the model, but it doesn't indicate how well it performs in real-world settings."
    ]
   },
