added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### AWS Step Functions is a serverless orchestration service that lets you coordinate multiple AWS services into serverless workflows. You can design and execute complex business logic as a series of steps, managing both sequential and parallel processes to automate tasks and workflows across different AWS applications and services. This service helps ensure that each step in your application executes in order, as intended, and handles error management and retry logic automatically."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## How do you ensure the security and compliance of data when using AWS?\n",
     "\n",
     "- Data Encryption: Use AWS KMS to encrypt data at rest and in transit.\n",
