added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -220,7 +220,15 @@
     "- BLEU (Bilingual Evaluation Understudy) score: Measures the quality of machine-generated text against reference translations, commonly used in machine translation.\n",
     "- ROUGE (Recall-Oriented Understudy for Gisting Evaluation): A set of metrics that evaluate the overlap between generated text and reference text, often used in summarization tasks. They help quantify the model's effectiveness and guide further improvements.\n",
     "- Perplexity is a metric used to evaluate how well a probabilistic model predicts a sample, such as a sequence of words.\n",
-    "#### There are two main evaluation methods: intrinsic and extrinsic. Intrinsic evaluation focuses on the model's internal aspects, like accuracy and precision, while extrinsic evaluation focuses on external aspects, like user satisfaction. Intrinsic evaluation is useful for debugging and improving the model, but it doesn't indicate how well it performs in real-world settings."
+    "#### There are two main evaluation methods: intrinsic and extrinsic. Intrinsic evaluation focuses on the model's internal aspects, like accuracy and precision, while extrinsic evaluation focuses on external aspects, like user satisfaction. Intrinsic evaluation is useful for debugging and improving the model, but it doesn't indicate how well it performs in real-world settings.\n",
+    "\n",
+    "## Explain how you would handle bias in an NLP model trained on internal data.\n",
+    "- Audit the Data: Start by thoroughly reviewing the data used for training the model. Look for imbalances or skewed representations of certain groups, themes, or sentiments.\n",
+    "- Identify Potential Bias Sources: Determine potential sources of bias, such as historical biases in decision-making processes or subjective annotations in training data.\n",
+    "- Rebalance the Dataset: Use techniques like oversampling underrepresented groups or undersampling overrepresented ones to create a more balanced training set.\n",
+    "- Disaggregated Analysis: Evaluate model performance separately across different demographic groups or categories to check for disparities in error rates or effectiveness.\n",
+    "- Continual Learning: Regularly update the model with new, more representative data as it becomes available. Continual learning approaches can help the model adapt to changes over time and mitigate emerging biases.\n",
+    "- Feedback Loop: Implement a mechanism to collect feedback on model outputs from diverse user groups. Use this feedback to identify unrecognized biases and update the model accordingly."
    ]
   },
   {
