added new files

--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -228,7 +228,8 @@
     "- Rebalance the Dataset: Use techniques like oversampling underrepresented groups or undersampling overrepresented ones to create a more balanced training set.\n",
     "- Disaggregated Analysis: Evaluate model performance separately across different demographic groups or categories to check for disparities in error rates or effectiveness.\n",
     "- Continual Learning: Regularly update the model with new, more representative data as it becomes available. Continual learning approaches can help the model adapt to changes over time and mitigate emerging biases.\n",
-    "- Feedback Loop: Implement a mechanism to collect feedback on model outputs from diverse user groups. Use this feedback to identify unrecognized biases and update the model accordingly."
+    "- Feedback Loop: Implement a mechanism to collect feedback on model outputs from diverse user groups. Use this feedback to identify unrecognized biases and update the model accordingly.\n",
+    "- Document Processes and Findings: Keep detailed documentation of all steps taken to identify and mitigate bias, including the methodologies used and the impacts observed. This documentation is crucial for transparency and for future audits."
    ]
   },
   {
