--- a/Guide/AWS-Guide.ipynb
+++ b/Guide/AWS-Guide.ipynb
@@ -295,6 +295,23 @@
    "source": [
     "##"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Word2Vec\n",
+    "\n",
+    "#### Word2vec is a technique in natural language processing (NLP) for obtaining vector representations of words. These vectors capture information about the meaning of the word based on the surrounding words. The word2vec algorithm estimates these representations by modeling text in a large corpus.\n",
+    "\n",
+    "## GLOVE\n",
+    "### GloVe (Global Vectors for Word Representation) is an unsupervised learning algorithm used in natural language processing (NLP) that creates vector representations for words. The model is trained on a corpus of text by aggregating global word-word co-occurrence statistics. The goal of GloVe is to learn word vectors that capture the meaning of two words when they appear next to each other, and to do so in a way that their dot product equals the logarithm of their probability of co-occurrence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
