we have a lot of uneeded columns

--- a/Machine-Learning-Books/Applied-Machine-Learning/Vector-Machines.ipynb
+++ b/Machine-Learning-Books/Applied-Machine-Learning/Vector-Machines.ipynb
@@ -17,7 +17,24 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### What makes SVMs special are kernels, some of which add dimensions to data to find boundaries that don’t exist at lower dimensions. Consider Figure 5-3. You can’t draw a line that completely separates the red dots from the purple dots. But if you add a third dimension as shown on the right—a z dimension whose value is based on a point’s distance from the center—then you can slide a plane between the purples and the reds and achieve 100% separation. In this example, data that isn’t linearly separable in two dimensions is linearly separable in three dimensions. The principle at work is Cover’s theorem, which states that data that isn’t linearly separable might be linearly separable if projected into higher-dimensional space using a nonlinear transform.\n",
+    "\n",
+    "#### But for SVMs to be broadly useful, you need a kernel that isn’t tied to the shape of a specific dataset.\n",
+    "\n",
+    "## Kernels\n",
+    "#### Scikit-Learn has several general-purpose kernels built in, including the linear kernel, the RBF kernel,1 the polynomial kernel, and the sigmoid kernel. The linear kernel doesn’t add dimensions. It works well with data that is linearly separable out of the box, but it doesn’t perform very well with data that isn’t. Applying it to the problem in Figure 5-3 produces the decision boundary on the left in Figure 5-4. Applying the RBF kernel to the same data produces the decision boundary on the right. The RBF kernel projects the x and y values into a higher-dimensional space and finds a hyperplane that cleanly separates the purples from the reds. When projected back to two dimensions, the decision boundary roughly forms a circle. Similar results can be achieved on this dataset with a properly tuned polynomial kernel, but generally speaking, the RBF kernel can find decision boundaries in nonlinear data that the pol⁠y­nomial kernel cannot. That’s why RBF is the default kernel type in Scikit if you don’t specify otherwise.\n",
+    "\n",
+    "#### A logical question to ask is, did the RBF kernel add a z to every x and y? The short answer is no. It effectively projected the data points into a space with an infinite number of dimensions. The key word is effectively. Kernels use mathematical shortcuts called kernel tricks to measure the effect of adding new dimensions without actually computing values for them. This is where the math for SVMs gets hairy. Kernels are carefully designed to compute the dot product between two n-dimensional vectors in m-dimensional space (where m is greater than n and can even be infinite) without generating all those new dimensions, and ultimately, the dot products are all an SVM needs to compute a decision boundary. It’s the mathematical equivalent of having your cake and eating it too, and it’s the secret sauce that makes SVMs awesome. SVMs can take a long time to train on large datasets, but one of the benefits of an SVM is that it tends to do better on smaller datasets with fewer rows or samples than other learning algorithms.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- from sklearn.metrics import ConfusionMatrixDisplay as cmd"
+   ]
   }
  ],
  "metadata": {
