--- a/Machine-Learning-Books/Applied-Machine-Learning/Vector-Machines.ipynb
+++ b/Machine-Learning-Books/Applied-Machine-Learning/Vector-Machines.ipynb
@@ -35,11 +35,29 @@
    "source": [
     "- from sklearn.metrics import ConfusionMatrixDisplay as cmd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(6, 6))\n",
+    "ax.grid(False)\n",
+    "cmd.from_estimator(pipe, x_test, y_test, display_labels=faces.target_names,\n",
+    "                   cmap='Blues', xticks_rotation='vertical', ax=ax)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "machine-learning-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
