--- a/Machine-Learning-Books/Applied-Machine-Learning/PCA.ipynb
+++ b/Machine-Learning-Books/Applied-Machine-Learning/PCA.ipynb
@@ -19,7 +19,30 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### A logical question to ask is, what is the “right” number of components? In other words, what number of components strikes the best balance between reducing the number of dimensions in the dataset and retaining most of the information? One way to find that number is with a scree plot, which charts the proportion of explained variance for each dimension. The following code produces a scree plot for the PCA transform used on the facial images:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "\n",
+    "plt.plot(pca.explained_variance_ratio_)\n",
+    "plt.xlabel('Principal Component')\n",
+    "plt.ylabel('Explained Variance')\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "plt.plot(np.cumsum(pca.explained_variance_ratio_))\n",
+    "plt.xlabel('Number of Components')\n",
+    "plt.ylabel('Cumulative Explained Variance');"
+   ]
   }
  ],
  "metadata": {
