--- a/Machine-Learning-Books/Applied-Machine-Learning/PCA.ipynb
+++ b/Machine-Learning-Books/Applied-Machine-Learning/PCA.ipynb
@@ -123,6 +123,18 @@
     "plt.colorbar(ticks=range(10))\n",
     "plt.clim(-0.5, 9.5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### t-SNE does a better job of separating groups of digits into clusters, indicating there are patterns in the data that machine learning can exploit. The chief drawback is that t-SNE is compute intensive, which means it can take a prohibitively long time to run on large datasets. One way to mitigate that is to run t-SNE on a subset of rows rather than the entire dataset. Another strategy is to use PCA to reduce the number of dimensions, and then subject the PCAed dataset to t-SNE."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
