we have a lot of uneeded columns

--- a/Machine-Learning-Books/Applied-Machine-Learning/PCA.ipynb
+++ b/Machine-Learning-Books/Applied-Machine-Learning/PCA.ipynb
@@ -311,7 +311,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The results aren’t quite as good as they were with the random forest, but the model still caught about 50% of the fraudulent transactions while mislabeling just 76 out of 284,315 legitimate transactions. That’s an error rate of less than 0.03% for legitimate transactions, compared to 0.007% for the supervised learning model."
+    "#### The results aren’t quite as good as they were with the random forest, but the model still caught about 50% of the fraudulent transactions while mislabeling just 76 out of 284,315 legitimate transactions. That’s an error rate of less than 0.03% for legitimate transactions, compared to 0.007% for the supervised learning model.\n",
+    "#### Two parameters in this model drive the error rate: the number of dimensions the datasets were reduced to (26), and the threshold chosen to distinguish between legitimate and fraudulent transactions (200). You can tweak the accuracy by experimenting with different values. I did some informal testing and concluded that this was a reasonable combination. Picking a lower threshold improves the model’s ability to identify fraudulent transactions, but at the cost of misclassifying more legitimate transactions. In the end, you have to decide what error rate you’re willing to live with, keeping in mind that declining a legitimate credit card purchase is likely to anger a customer."
    ]
   },
   {
