we have a lot of uneeded columns

--- a/Machine-Learning-Books/Applied-Machine-Learning/Deep-Learning.ipynb
+++ b/Machine-Learning-Books/Applied-Machine-Learning/Deep-Learning.ipynb
@@ -38,11 +38,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Greater widths and depths give the network more capacity to “learn” by fitting more tightly to the training data. They also increase the likelihood of overfitting. It’s the validation results that matter, and sometimes loosening the fit to the training data allows the network to generalize better. The simplest way to loosen the fit is to reduce the number of neurons.\n",
+    "- Generally speaking, you prefer greater width to greater depth in part to avoid the vanishing gradient problem, which diminishes the impact of added layers. The ReLU activation function provides some protection against vanishing gradients, but that protection isn’t absolute. For an explanation, see “How to Fix the Vanishing Gradients Problem Using the ReLU”. In addition, a network with, say, 100 neurons in one layer trains faster than a network with five layers of 20 neurons each because the former has fewer weights. Think about it: there are no connections between neurons in one layer, but there are 1,600 connections (202 × 4) between five layers containing 20 neurons each.\n",
+    "- Fewer neurons means less training time. State-of-the-art neural networks trained with large datasets sometimes take days or weeks to train on high-end GPUs, so training time is important."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "\n",
+    "err = hist.history['mae']\n",
+    "val_err = hist.history['val_mae']\n",
+    "epochs = range(1, len(err) + 1)\n",
+    "\n",
+    "plt.plot(epochs, err, '-', label='Training MAE')\n",
+    "plt.plot(epochs, val_err, ':', label='Validation MAE')\n",
+    "plt.title('Training and Validation Accuracy')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Mean Absolute Error')\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.plot()"
+   ]
   }
  ],
  "metadata": {
