added new notes

--- a/Machine-Learning-Books/Applied-ML-Explainability/LIME.ipynb
+++ b/Machine-Learning-Books/Applied-ML-Explainability/LIME.ipynb
@@ -10,6 +10,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### One such popular approach is Local Interpretable Model-Agnostic Explanations (LIME), which has been widely adopted to provide model-agnostic local explainability. The LIME Python library is a robust framework that provides human-friendly explanations to tabular, text, and image data and helps in interpreting black-box supervised machine learning algorithms.\n",
+    "\n",
+    "- Local fidelity: LIME tries to replicate the behavior of the entire model by exploring the proximity of the data instance being predicted. So, it provides local explainability to the data instance being used for prediction. This is important for any non-technical user to understand the exact reason for the model's decision-making process.\n",
+    "- Global intuition: Although the algorithm provides local explainability, it does try to explain a representative set to the end users, thereby providing a global perspective to the functioning of the model. SP-LIME provides a global understanding of the model by explaining a collection of data instances. This will be covered in more detail in the next section."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
